[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-flow"
dynamic = ["version"]
description = "An agent library designed to parse and process MarkdownFlow documents"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ai-shifu/markdown-flow-agent-py"
"Bug Tracker" = "https://github.com/ai-shifu/markdown-flow-agent-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["markdown_flow*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "markdown_flow.__version__"}
